@@ -51,6 +51,8 @@ Changed/New Strings:
 - Label_Options_MaximumMartialTechniques
 - String_MasteryPointsAcronym
 - Label_BonusLP
+- Message_DuplicateFile
+- MessageTitle_DuplicateFile
 
 Build 225
 Application Changes:
